--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="title_activity_detail">DetailActivity</string>
 
     <string name="download">Download</string>
+    <string name="glide">Glide - Image Loading Library by BumpTech</string>
+    <string name="load_app">LoadApp - Current repository by Udacity</string>
+    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="download_image">Download image</string>
+
 </resources>
